@@ -58,6 +58,7 @@ class JavaVMStackSOF {
 
 
 /**
+ *  jar -Xms512m -Xmx512m -XX:PermSize=512M -XX:MaxPermSize=1024m -Djava.awt.headless=true
  linux执行  java -XX:+PrintFlagsFinal -version | grep :
 
  UseCompressedOops true 启动指针压缩，当服务器内存在4-32G时有效，所以说java服务器内存最好不要大于32G
